--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "randomicon",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "simple icon generator with seeded random",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "seanchas116",
+  "license": "MIT",
   "devDependencies": {
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
