--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
         "module": "commonjs",
         "target": "es5",
         "noImplicitAny": true,
-        "sourceMap": false
+        "sourceMap": false,
+        "outDir": "lib"
     },
     "exclude": [
         "node_modules"
-    ],
-    "compileOnSave": false
+    ]
 }
