--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   "dependencies": {
     "seedrandom": "^2.4.2",
     "tinycolor2": "^1.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/seanchas116/randomicon.git"
+  },
+  "bugs": {
+    "url": "https://github.com/seanchas116/randomicon/issues"
+  },
+  "homepage": "https://github.com/seanchas116/randomicon#readme"
 }
