--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "target": "es5",
         "noImplicitAny": true,
         "sourceMap": false,
-        "outDir": "lib"
+        "outDir": "lib",
+        "declaration": true
     },
     "exclude": [
         "node_modules"
