--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf lib && $(npm bin)/tsc --declaration",
     "start": "webpack-dev-server"
   },
   "author": "seanchas116",
